--- a/res/layout/fragment_questions.xml
+++ b/res/layout/fragment_questions.xml
@@ -1,26 +1,62 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <ProgressBar
-        android:id="@+id/progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|center_horizontal" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
-        android:id="@+id/pull_refresh_list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:cacheColorHint="#00000000"
-        android:divider="#ffb4b4b4"
-        android:dividerHeight="1.0px"
-        android:fadingEdge="none"
-        android:fastScrollEnabled="false"
-        android:footerDividersEnabled="true"
-        android:headerDividersEnabled="true"
-        android:smoothScrollbar="true"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical" >
+
+                <include
+                    android:id="@id/no_network_connect"
+                    android:layout_gravity="top"
+                    layout="@layout/no_network_connect"
+                    android:visibility="gone" />
+
+                <com.handmark.pulltorefresh.library.PullToRefreshListView
+                    xmlns:ptr="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/pull_refresh_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:cacheColorHint="#00000000"
+                    android:descendantFocusability="blocksDescendants"
+                    android:divider="#ffffffff"
+                    android:dividerHeight="2dp"
+                    android:fadingEdge="none"
+                    android:fastScrollEnabled="false"
+                    android:footerDividersEnabled="true"
+                    android:headerDividersEnabled="true"
+                    android:smoothScrollbar="true"
+                    ptr:ptrHeaderBackground="#000000"
+                    ptr:ptrHeaderSubTextColor="#eeeeee"
+                    ptr:ptrHeaderTextColor="#ffffff" />
+            </LinearLayout>
+        </FrameLayout>
+
+        <TextView
+            android:id="@+id/dis_more"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:clickable="true"
+            android:gravity="center_vertical|center_horizontal"
+            android:padding="10dp"
+            android:text="@string/dis_more"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:visibility="gone" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/sel_classify"
@@ -28,7 +64,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_margin="5dp"
-        android:onClick="OnClick"
         android:text="@string/classify" />
 
 </FrameLayout>
